--- a/ContainmentZoneAlertApp/app/src/main/res/values/strings.xml
+++ b/ContainmentZoneAlertApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Containment Zone Alert App</string>
-    <string name="api_url">http://192.168.45.182:8080/</string>
+    <string name="api_url">https://containment-zone-alert-app-portal.apps.modernapps.site/</string>
     <string name="safezone_msg">You are in safe zone</string>
     <string name="dangerzone_msg">You are in a containment Zone</string>
     <string name="notification_title">Current Location Update</string>
